[gd_scene load_steps=4 format=3 uid="uid://drgkybkf4y84q"]

[ext_resource type="Script" path="res://new_menu/menu.gd" id="1_vdh3b"]

[sub_resource type="LabelSettings" id="LabelSettings_5a7mw"]
font_size = 64
font_color = Color(1, 1, 1, 0.25098)

[sub_resource type="LabelSettings" id="LabelSettings_2lw3p"]
font_size = 128

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vdh3b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LeftLabel" type="Label" parent="CenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "LeftItem"
label_settings = SubResource("LabelSettings_5a7mw")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="CenterLabel" type="Label" parent="CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CenterItem"
label_settings = SubResource("LabelSettings_2lw3p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightLabel" type="Label" parent="CenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "RightItem"
label_settings = SubResource("LabelSettings_5a7mw")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 1
